// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostList > should render error 1`] = `
<div>
  <div
    class="_error_6d2450"
  >
    Server Error
  </div>
</div>
`;

exports[`PostList > should render loading 1`] = `
<div>
  <div
    class="_loading_6d2450"
  >
    <div
      class="_loader_6d2450"
    />
  </div>
</div>
`;

exports[`PostList > should render no post 1`] = `
<div>
  <div
    class="_PostList_6d2450"
  >
    <div
      class="_emptyList_6d2450"
    >
      No posts yet
    </div>
  </div>
</div>
`;

exports[`PostList > should render posts 1`] = `
<div>
  <div
    class="_PostList_6d2450"
  >
    <div
      class="_loading_5a7bc9"
    >
      <div
        class="_loaderContainer_5a7bc9"
      >
        <div
          class="_loader_5a7bc9"
        />
      </div>
    </div>
    <div
      class="_loading_5a7bc9"
    >
      <div
        class="_loaderContainer_5a7bc9"
      >
        <div
          class="_loader_5a7bc9"
        />
      </div>
    </div>
    <div
      class="_loading_5a7bc9"
    >
      <div
        class="_loaderContainer_5a7bc9"
      >
        <div
          class="_loader_5a7bc9"
        />
      </div>
    </div>
    <div
      class="_loading_5a7bc9"
    >
      <div
        class="_loaderContainer_5a7bc9"
      >
        <div
          class="_loader_5a7bc9"
        />
      </div>
    </div>
    <div
      class="_loading_5a7bc9"
    >
      <div
        class="_loaderContainer_5a7bc9"
      >
        <div
          class="_loader_5a7bc9"
        />
      </div>
    </div>
  </div>
</div>
`;
